route_tables.tf
resource "aws_route_table" "Project_IG_route_table" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.Project_IG.id
    }

    tags = {
      Name = "Public-rt"
    }
  
}

resource "aws_route_table_association" "Public access" {
    subnet_id = aws_subnet.Public.id
    route_table_id = aws_route_table.Project_IG_route_table.id
  
}
